syntax = "proto3";

option go_package = "category/";

service Category {
    rpc GetCategoriesByIds (GetCatIdsRequest) returns (CatIdsResp) {}
}

message GetCatIdsRequest {
    repeated string ids = 1;
}

message CatIdsResp {
    repeated CategoryDTO data = 1;
}

message CategoryDTO {
    string id = 1;
    string name = 2;
    string description = 3;
    string icon = 4;
    string status = 5;
}
